<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_symptoms"
        android:icon="@drawable/ic_pulse"
        android:title="@string/nav_symptoms" />
    <item
        android:id="@+id/nav_doctors"
        android:icon="@drawable/ic_stethoscope"
        android:title="@string/nav_doctors" />
    <item
        android:id="@+id/nav_hospitals"
        android:icon="@drawable/ic_hospital"
        android:title="@string/nav_hospitals" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
</menu>
